# generated_text

./: .vimrc  BATCH_EXAMPLE.cy  Customer_Intake_Form.md  ahh.cy  app.js  app.py  button.pug  buttonclick.pug  cli.py  compare.py  compare.sh  cyeditor.html  dope.cy  download.py  e.pug  example.js  example.pug  fastcyAPI.py  fetchandexecute.pug  generate.py  h.html  index.html  load.cy  neo4j_ingestion.py  neolog.py  pass_fail.py  py2neo.py  report.py  req.py  script.js  search.py  search_clean.cy  setup.py  temp.cy  template.tex  time.py  upload.py
hf/: DOCKERFILE  build_model_metadata.py  download.py  download_hf_models.py  fix_hf_urls.py  merge_metadata.py  metadata_collector.py  models.csv  neo4j_ingest_hf_raw.py  oracle_api.py  scrape.py  sql_ingest_hf_raw.py
hf/hf-backend/: README.md  pyproject.toml
hf/hf-backend/app/: config.py  db.py  ingest.py  main.py  models.py  neo.py  search.py  utils.py
hf/hf-ui-pug/: package.json  server.js
hf/hf-ui-pug/css/: custom.css
hf/hf-ui-pug/js/: model-detail.js  models.js
hf/hf-ui-pug/src/pug/: model-detail.pug  models.pug
hf/hf-ui-pug/src/pug/layouts/: _layout.pug
hf/minio/: buckets-users.yaml  job-download-models.yaml  minio-tenant-ns.yaml  models-cm.yaml  s3-writer-secret.yaml  tenant.yaml
latex/: cot.tex  embeddings.tex  hf.tex
notes/: braindump.md
